# pocket-mcp-api

./: .dockerignore  .env  .gitignore  API_SPEC.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
mcp-server/: README.md  main.py  requirements.txt
mcp-server/mcp_servers/: log_parser.py  lotto_number_generator.py  main.py  math_calculator.py  meeting_room_server.py  schedule_mcp_server.py  security_code_analyzer.py  sql_query_builder.py  test.py  test_mcp_code.py
pocket/app/: __init__.py  main.py
pocket/app/api/v1/: router.py
pocket/app/api/v1/endpoints/: activity_logs.py  likes.py  mcp_servers.py
pocket/app/core/: config.py  database.py
pocket/app/models/: __init__.py  activity_log.py  enums.py  like.py  mcp_server.py  user.py
pocket/app/schemas/: __init__.py  activity_log.py  common.py  like.py  mcp_server.py
