[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "pocket-mcp-api"
version = "0.1.0"
description = "FastAPI backend for MCP Server Store"
readme = "README.md"
authors = [{ name = "Pocket Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "pydantic-settings==2.3.4",
    "alembic==1.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[tool.hatch.build.targets.wheel]
packages = ["pocket"]
